--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,8 @@ services:
       dockerfile: bombay/docker-files/Dockerfile
     image: bombayshop
     environment:
-      - DJANGO_DEBUG=1
+#      - ENABLE_EN=
+#      - DJANGO_DEBUG=
       - POSTGRES_DB=myshop_bombay
       - DJANGO_SETTINGS_MODULE=myshop.settings
     env_file:
@@ -67,7 +68,6 @@ services:
     restart: always
     image: bombayshop
     environment:
-      - DJANGO_DEBUG=1
       - POSTGRES_DB=myshop_bombay
       - DJANGO_SETTINGS_MODULE=myshop.settings
     env_file:
