--- a/prod_settings/docker-compose.yml
+++ b/prod_settings/docker-compose.yml
@@ -38,18 +38,19 @@ services:
     restart: always
     image: bombayshop
     environment:
-      - DJANGO_DEBUG=0
       - POSTGRES_DB=myshop_bombay
       - DJANGO_SETTINGS_MODULE=myshop.settings
-      - VIRTUAL_HOST=www.bombayshop.com.ua
+#      - DJANGO_DEBUG=1
+      - VIRTUAL_HOST=bombayshop.com.ua,www.bombayshop.com.ua
       - VIRTUAL_PROTO=uwsgi
-      - LETSENCRYPT_HOST=www.bombayshop.com.ua
+      - VIRTUAL_PORT=9009
+      - LETSENCRYPT_HOST=bombayshop.com.ua,www.bombayshop.com.ua
       - LETSENCRYPT_EMAIL=ssladmin@bombayshop.com.ua
     env_file:
       - settings/databases.environ
     volumes:
-      - shopmedia:/web/workdir
-      - ./bombay.json:/web/fixtures/bombay.json
+      - shopmedia:/web/media
+      - /root/settings/uwsgi.ini:/web/uwsgi.ini
     command: uwsgi --ini uwsgi.ini
     depends_on:
       - postgresdb
@@ -57,32 +58,47 @@ services:
       - elasticsearch
     networks:
       - shopnet
-      - nginx-proxy
+    ports:
+      - 9009:9009
 
   worker:
     restart: always
     image: bombayshop
     environment:
-      - DJANGO_DEBUG=1
       - POSTGRES_DB=myshop_bombay
       - DJANGO_SETTINGS_MODULE=myshop.settings
     env_file:
       - settings/databases.environ
       - settings/email.environ
-    command: su django -c /web/worker.py
     volumes:
-      - shopmedia:/web/workdir
-      - ./bombay.json:/web/fixtures/bombay.json
+      - shopmedia:/web/media
+      - /root/settings/uwsgi.ini:/web/uwsgi.ini
+    command: su django -c /web/worker.py
     depends_on:
       - postgresdb
       - redishost
     networks:
       - shopnet
 
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    volumes:
+      - /root/ssl:/etc/nginx/certs
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - shopmedia:/app/media
+    depends_on:
+      - wsgiapp
+    networks:
+      - shopnet
+      - nginx-proxy
+    ports:
+      - 80:80
+      - 443:443
+
 networks:
   shopnet:
   nginx-proxy:
-      external: true
+    external: true
 
 volumes:
   pgdata:
