--- a/bombay/docker-files/uwsgi.ini
+++ b/bombay/docker-files/uwsgi.ini
@@ -10,7 +10,7 @@ if-not-env = VIRTUAL_PROTO
 http-socket = :9009
 endif =
 env = DJANGO_SETTINGS_MODULE=myshop.settings
-; exec-pre-app = /web/manage.py initialize_bombay_shop --noinput
+exec-pre-app = /web/manage.py initialize_bombay_shop --noinput
 module = wsgi:application
 buffer-size = 32768
 static-map = /static=$(DJANGO_STATIC_ROOT)
